# wagtail-shortcode

./: .coveragerc  .eslintrc.js  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  setup.cfg  testmanage.py  tox.ini  tsconfig.json  webpack.config.js
.github/scripts/: report_nightly_build_failure.py
.github/workflows/: publish.yml  test.yml
wagtail_shortcode/: __init__.py  apps.py  handlers.py  wagtail_hooks.py
wagtail_shortcode/static/wagtail_shortcode/js/: .gitignore
wagtail_shortcode/static_src/: custom.d.ts  main.css  main.tsx
wagtail_shortcode/test/: __init__.py  apps.py  settings.py  wagtail_hooks.py
